Ajout Tooltips sur les icones du footer Augmentation ombres sur navbar et footer Correction z-index de la navbar

--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -14,7 +14,7 @@ nav {
   }
 
   color: $navbar-font-color;
-  @extend .z-depth-1;
+  @extend .z-depth-2;
   background-color: lighten($perso-red, 5%);
   width: 100%;
   height: $navbar-height-mobile;
