--- a/scss/style.scss
+++ b/scss/style.scss
@@ -124,7 +124,7 @@
       height: $navbar-height;
 
         #navbar{
-          z-index: 1; //obligation d'appliquer un z-index de la navbar supérieur à 2 pour éviter le recouvrement par les cards de la section connaissances lors du scroll vertical de la page
+          z-index: 4; //obligation d'appliquer un z-index de la navbar supérieur à 2 pour éviter le recouvrement par les cards de la section connaissances lors du scroll vertical de la page
         }
       }
     /***/
@@ -456,26 +456,30 @@
       footer{
         background-color: $perso-red;
         display: flex;
+        width: 100%;
         flex-direction: row;
         justify-content: space-between;
         height: $navbar-height;
         position: fixed;
         bottom: 0;
         opacity: 0;
-        
+       
+        &.bot{ // Ecrase le comportement par défaut des rows de materialize pour conserver le margin à 0
+          margin-bottom: inherit;
+        }
+
         // Application du même ombrage que la navbar mais inversé
-        box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.14),
-        0 -3px 1px -2px rgba(0,0,0,0.12),
-        0 -1px 5px 0 rgba(0,0,0,0.2);
+        box-shadow: 0 -4px 5px 0 rgba(0,0,0,0.14),
+        0 -1px 10px 0 rgba(0,0,0,0.12),
+        0 -2px 4px -1px rgba(0,0,0,0.3);
 
         div{
-          margin-left: 10px;
-          text-align: center;
+          text-align: left;
           align-self: center;
         }
+
         //Gestion des icônes du footer
         i{
-          margin: 0px 15px;
           color: $perso-white;
 
           &:hover{
@@ -484,10 +488,10 @@
           }
         }
 
-        p{
+        .text{
           color: $perso-white;
           font-weight: 500;
-          font-size: 1.5rem;
+          font-size: 1.4rem;
         }
 
         /* Classe utilisé pour rendre le footer fixe lorsque l'on a suffisament scrollé la page */
@@ -497,8 +501,17 @@
           left: 0;
           right: 0;
           opacity: 1;
+          margin-bottom: 0;
         }
+
       }
-    /***/
+      /***/
+
+      /* Classe utilisé pour mise en forme des tooltips du footer (mail et tel) */
+      .material-tooltip{
+        background-color: #F45B69;
+        border-radius: 5px;
+      } 
+
 
 /*# sourceMappingURL=style.scss.map */
